Links and images

--- a/lists-and-links/lists.html
+++ b/lists-and-links/lists.html
@@ -37,5 +37,14 @@
                 <li>Web</li>
             </ul>
         </ul>
+        <!-- <a href="https://www.w3schools.com/html/html_lists_unordered.asp">Unordered Lists, Link type one</a> -->
+        <ul>
+            <li><a href="https://www.w3schools.com/html/html_lists_unordered.asp">Unordered Lists</a></li>
+            <li><a href="https://www.w3schools.com/html/html_lists_unordered.asp" target="_blank">Unordered Lists</a></li>
+            <li><a href="../intro/index.html">Index page</a></li>
+        </ul>
+        <img src="https://avatars.githubusercontent.com/u/18133?s=200&v=4" alt="Git git git" width="300" height="300" />
+        <img src="../images/18133.png" alt="Git" />
+       
     </body>
 </html>
