--- a/intro/index.html
+++ b/intro/index.html
@@ -11,5 +11,6 @@
         <p>Tekst paragrafa 2</p>
         <h3>Jos jedan podnaslov</h3>
         <p>Tekst paragrafa 3</p>
+        <a href="../lists-and-links/lists.html">Go back</a>
     </body>
 </html>
